# cache-simulator

./: CMakeLists.txt  README.md
configs/: default.conf  direct_mapped.conf  fully_associative.conf  l2_cache.conf
include/: Cache.h  CacheLine.h  CacheSet.h  Config.h  ConfigParser.h  IReplacementPolicy.h  TraceReader.h
src/: Cache.cpp  CacheLine.cpp  CacheSet.cpp  ConfigParser.cpp  IReplacementPolicy.cpp  TraceReader.cpp  main.cpp
tests/: CMakeLists.txt  test_cache_address.cpp  test_cache_sim.cpp  test_cacheline.cpp  test_cacheset.cpp  test_configparser.cpp  test_replacement_policies.cpp  test_tracereader.cpp
tools/: gen_traces.cpp
traces/: example.trace  sample.trace
